Before I get totrno https support

--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -15,15 +15,16 @@ http {
 
   server {
     listen 80;
+    listen [::]:80;
     server_name totrno.com www.totrno.com;
     charset utf-8;
-
-    root /dist;
-    index index.html;
 
 	location ~ ^/(static|media)/ {
       root /code;
     }
+
+    root /dist;
+    index index.html;
 
     # frontend
     location / {
@@ -41,18 +42,6 @@ http {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $http_host;
     }
-
-    # backend static
-    #location /static/ {
-    #    root /code;
-    #}
-
-    # backend media
-    #location /media/ {
-    #    root /code;
-    #}
-
-
 
     # Some basic cache-control for static files to be sent to the browser
     location ~* \.(?:ico|css|js|gif|jpe?g|png)$ {
