first try at getting https to work

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -39,12 +39,17 @@ services:
       dockerfile: nginx/Dockerfile
     ports:
       - "80:80"
+      - "443:443"
     depends_on:
       - backend
     volumes:
       - ./backend/media/:/code/media/
       - ./backend/static/:/code/static/
       - ./nginx/prod.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/dh-param/dhparam-2048.pem:/etc/ssl/certs/dhparam-2048.pem
+      - /docker-volumes/etc/letsencrypt/live/totrno.com/fullchain.pem:/etc/letsencrypt/live/totrno.com/fullchain.pem
+      - /docker-volumes/etc/letsencrypt/live/totrno.com/privkey.pem:/etc/letsencrypt/live/totrno.com/privkey.pem
+
 
 volumes:
   postgres_data: {}
