--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -84,19 +84,6 @@ http {
         ssl_certificate /etc/letsencrypt/live/totrno.com/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/totrno.com/privkey.pem;
     
-        #location / {
-        #    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
-        #    add_header X-XSS-Protection "1; mode=block" always;
-        #    add_header X-Content-Type-Options "nosniff" always;
-        #    add_header X-Frame-Options "DENY" always;
-        #    add_header Content-Security-Policy "default-src 'none'; font-src 'https://fonts.googleapis.com'; img-src 'self' https://i.imgur.com; object-src 'none'; script-src 'self'; style-src 'self'" always;
-        #    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-        #    proxy_pass http://backend;
-        #    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #    proxy_set_header Host $host;
-        #    proxy_redirect off;
-        #}
-    
         location ~ ^/(static|media)/ {
           root /code;
         }
@@ -112,14 +99,27 @@ http {
         location @rewrites {
           rewrite ^(.+)$ /index.html last;
         }
+    
+        location ~ ^/(admin|api) {
+            add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
+            add_header X-XSS-Protection "1; mode=block" always;
+            add_header X-Content-Type-Options "nosniff" always;
+            add_header X-Frame-Options "DENY" always;
+            add_header Content-Security-Policy "default-src 'none'; font-src 'https://fonts.googleapis.com'; img-src 'self' https://i.imgur.com; object-src 'none'; script-src 'self'; style-src 'self'" always;
+            add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+            proxy_pass http://backend;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
+        }
       
         # backend urls
-        location ~ ^/(admin|api) {
-          proxy_redirect off;
-          proxy_pass http://backend;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-          proxy_set_header Host $http_host;
-        }
+        #location ~ ^/(admin|api) {
+        #  proxy_redirect off;
+        #  proxy_pass http://backend;
+        #  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        #  proxy_set_header Host $http_host;
+        #}
       
     }
 }
