--- a/nginx/prod.conf
+++ b/nginx/prod.conf
@@ -93,7 +93,13 @@ http {
       
         # frontend
         location / {
-          try_files $uri $uri/ @rewrites;
+            add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
+            add_header X-XSS-Protection "1; mode=block" always;
+            add_header X-Content-Type-Options "nosniff" always;
+            add_header X-Frame-Options "DENY" always;
+            add_header Content-Security-Policy "default-src 'none'; font-src 'https://fonts.googleapis.com'; img-src 'self' https://i.imgur.com; object-src 'none'; script-src 'self'; style-src 'self'" always;
+            add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+            try_files $uri $uri/ @rewrites;
         }
       
         location @rewrites {
